# oracc-parser

./: .env.example  .gitignore  LICENSE  README.md  add_config_hints.py  api_documentation.md  bugs  documentation.md  main.py  patch_notebook.py  patch_notebook_03.py  pyproject.toml  requirements.txt
notebooks/: 01_quickstart.ipynb  02_configurations.ipynb  02_reference_data.ipynb  03_configure_and_export.ipynb  03_translations.ipynb  04_oracc_json_processing.ipynb  04_reference_data.ipynb  05_translations.ipynb
oracc_parser/: __init__.py  cache.py  cli.py  constants.py  pipeline.py  server.py  settings.py
oracc_parser/data/: pos_tags.csv  provenience.csv  sign_readings.csv
oracc_parser/download/: extract_jsons.py  fetch_data.py  oracc_download.py  pleiades.py
oracc_parser/enriched_data/: grouped_oracc_metadata_columns.csv  languages.csv  period_mapping.csv  pos_tags.csv  projects_metadata.csv  provenience.csv  raw_archive_values.csv  sign_readings.csv  (+1 more)
output/: combined_dataset.csv  combined_dataset.jsonl  saao_saa01.csv  saao_saa01.jsonl
scripts/: debug_json_response.py  download_zenodo_data.py  export_dataset.py  fetch_live_projects.py  inspect_project_schema.py  patch_nb_goals.py  patch_nb_warnings.py  pleiades_report.json  pleiades_results.txt  pleiades_validation_results.txt  rewrite_nb02.py  run_tests.py  start_server.py  update_notebook_attrs.py  update_notebook_paths.py  update_projects_metadata.py  upload_to_zenodo.py  validate_pleiades.py
tests/: conftest.py  test_cache.py  test_constants.py  test_export.py  test_models.py  test_parsing.py  test_pipeline.py  test_settings.py
(+927 files in other folders)
